--- a/python_scripts/settings_test.ini
+++ b/python_scripts/settings_test.ini
@@ -2,6 +2,8 @@
 proj_name=Shullcas
 local_dir=/home/gcng/Shortcuts/AndesWaterResources/GSFLOW/Shullcas
 gsflow_exe=/home/gcng/workspace/Models/GSFLOW/GSFLOW_1.2.0_gcng/bin
-gsflow_simdir=/media/gcng/STORAGE3A/GSFLOW/Shullcas_CrystalLauren5
+gsflow_simdir=/media/gcng/STORAGE3A/GSFLOW/Shullcas_CrystalLauren5_works
 DEM=DEM
 GISinput_dir=/media/gcng/STORAGE3A/GSFLOW/GSFLOW_input_Shullcas/CrystalLauren5
+start_date=2013-08-26
+end_date=2016-09-29
