--- a/python_scripts/settings_test.ini
+++ b/python_scripts/settings_test.ini
@@ -5,5 +5,4 @@ gsflow_exe=/home/gcng/workspace/Models/GSFLOW/GSFLOW_1.2.0_gcng/bin
 gsflow_simdir=/media/gcng/STORAGE3A/GSFLOW/Shullcas_CrystalLauren5_works
 DEM=DEM
 GISinput_dir=/media/gcng/STORAGE3A/GSFLOW/GSFLOW_input_Shullcas/CrystalLauren5
-start_date=2013-08-26
-end_date=2016-09-29
+climate_data_file=/media/gcng/STORAGE3A/GSFLOW/Shullcas_Updated_gcng/Data/climate/Huaytapallana_MetData_F.txt
