plot uzf now works with 2-layer, other edits

--- a/python_scripts/settings_spinup.ini
+++ b/python_scripts/settings_spinup.ini
@@ -1,7 +1,7 @@
 [settings]
-proj_name=Shullcas_2lay
+proj_name=Shullcas
 gsflow_exe=/home/gcng/workspace/Models/GSFLOW/GSFLOW_1.2.0_gcng/bin
-gsflow_simdir=/media/gcng/STORAGE3A/GSFLOW/Shullcas_CrystalLauren5_works_2lay
+gsflow_simdir=/media/gcng/STORAGE3A/GSFLOW/Shullcas_CrystalLauren5_works
 DEM=DEM
 GISinput_dir=/media/gcng/STORAGE3A/GSFLOW/GSFLOW_input_Shullcas/CrystalLauren5
 climate_data_file=/media/gcng/STORAGE3A/GSFLOW/Shullcas_Updated_gcng/Data/climate/Huaytapallana_MetData_F.txt
@@ -15,6 +15,6 @@ finf = 0.0015
 
 [domain]
 start_date=2013-08-26
-end_date=2016-09-29
-NLAY=2
-DZ=50,100
+end_date=2014-08-25
+NLAY=1
+DZ=200
