--- a/python_scripts/settings.ini
+++ b/python_scripts/settings.ini
@@ -1,6 +1,6 @@
 [settings]
 proj_name=Shullcas_2lay
-gsflow_exe=/home/gcng/workspace/Models/GSFLOW/GSFLOW_1.2.0_gcng/bin
+gsflow_exe=/home/gcng/workspace/Models/GSFLOW/GSFLOW_1.2.0_gcng/bin/gsflow
 gsflow_simdir=/media/gcng/STORAGE3A/GSFLOW/Shullcas_CrystalLauren5_works_2lay
 DEM=DEM
 GISinput_dir=/media/gcng/STORAGE3A/GSFLOW/GSFLOW_input_Shullcas/CrystalLauren5
